// Vitest Snapshot v1

exports[`MasonryGrid > correct usage > renders all the gutter options 1`] = `
.c0 {
  box-sizing: border-box;
  display: grid;
  gap: var(--gutter,0px);
  grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth,639px),100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  grid-row: span var(--rows,1);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

<div
  className="c0 c1"
  data-bedrock-masonry-grid=""
  style={
    {
      "--gutter": "0px",
      "--minItemWidth": undefined,
    }
  }
>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 2`] = `
.c0 {
  box-sizing: border-box;
  display: grid;
  gap: var(--gutter,0px);
  grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth,639px),100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  grid-row: span var(--rows,1);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

<div
  className="c0 c1"
  data-bedrock-masonry-grid=""
  style={
    {
      "--gutter": "0.0625rem",
      "--minItemWidth": undefined,
    }
  }
>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 3`] = `
.c0 {
  box-sizing: border-box;
  display: grid;
  gap: var(--gutter,0px);
  grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth,639px),100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  grid-row: span var(--rows,1);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

<div
  className="c0 c1"
  data-bedrock-masonry-grid=""
  style={
    {
      "--gutter": "0.125rem",
      "--minItemWidth": undefined,
    }
  }
>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 4`] = `
.c0 {
  box-sizing: border-box;
  display: grid;
  gap: var(--gutter,0px);
  grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth,639px),100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  grid-row: span var(--rows,1);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

<div
  className="c0 c1"
  data-bedrock-masonry-grid=""
  style={
    {
      "--gutter": "0.25rem",
      "--minItemWidth": undefined,
    }
  }
>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 5`] = `
.c0 {
  box-sizing: border-box;
  display: grid;
  gap: var(--gutter,0px);
  grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth,639px),100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  grid-row: span var(--rows,1);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

<div
  className="c0 c1"
  data-bedrock-masonry-grid=""
  style={
    {
      "--gutter": "0.5rem",
      "--minItemWidth": undefined,
    }
  }
>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 6`] = `
.c0 {
  box-sizing: border-box;
  display: grid;
  gap: var(--gutter,0px);
  grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth,639px),100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  grid-row: span var(--rows,1);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

<div
  className="c0 c1"
  data-bedrock-masonry-grid=""
  style={
    {
      "--gutter": "0.75rem",
      "--minItemWidth": undefined,
    }
  }
>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 7`] = `
.c0 {
  box-sizing: border-box;
  display: grid;
  gap: var(--gutter,0px);
  grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth,639px),100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  grid-row: span var(--rows,1);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

<div
  className="c0 c1"
  data-bedrock-masonry-grid=""
  style={
    {
      "--gutter": "1rem",
      "--minItemWidth": undefined,
    }
  }
>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 8`] = `
.c0 {
  box-sizing: border-box;
  display: grid;
  gap: var(--gutter,0px);
  grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth,639px),100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  grid-row: span var(--rows,1);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

<div
  className="c0 c1"
  data-bedrock-masonry-grid=""
  style={
    {
      "--gutter": "1.5rem",
      "--minItemWidth": undefined,
    }
  }
>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 9`] = `
.c0 {
  box-sizing: border-box;
  display: grid;
  gap: var(--gutter,0px);
  grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth,639px),100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  grid-row: span var(--rows,1);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

<div
  className="c0 c1"
  data-bedrock-masonry-grid=""
  style={
    {
      "--gutter": "2rem",
      "--minItemWidth": undefined,
    }
  }
>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 10`] = `
.c0 {
  box-sizing: border-box;
  display: grid;
  gap: var(--gutter,0px);
  grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth,639px),100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  grid-row: span var(--rows,1);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

<div
  className="c0 c1"
  data-bedrock-masonry-grid=""
  style={
    {
      "--gutter": "3rem",
      "--minItemWidth": undefined,
    }
  }
>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 11`] = `
.c0 {
  box-sizing: border-box;
  display: grid;
  gap: var(--gutter,0px);
  grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth,639px),100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  grid-row: span var(--rows,1);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

<div
  className="c0 c1"
  data-bedrock-masonry-grid=""
  style={
    {
      "--gutter": "4rem",
      "--minItemWidth": undefined,
    }
  }
>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders custom minItemWidth 1`] = `
.c0 {
  box-sizing: border-box;
  display: grid;
  gap: var(--gutter,0px);
  grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth,639px),100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  grid-row: span var(--rows,1);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

<div
  className="c0 c1"
  data-bedrock-masonry-grid=""
  style={
    {
      "--gutter": "1rem",
      "--minItemWidth": 320,
    }
  }
>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders custom minItemWidth as string 1`] = `
.c0 {
  box-sizing: border-box;
  display: grid;
  gap: var(--gutter,0px);
  grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth,639px),100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  grid-row: span var(--rows,1);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

<div
  className="c0 c1"
  data-bedrock-masonry-grid=""
  style={
    {
      "--gutter": "1rem",
      "--minItemWidth": "32rem",
    }
  }
>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders with theme overrides 1`] = `
.c0 {
  box-sizing: border-box;
  display: grid;
  gap: var(--gutter,0px);
  grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth,639px),100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  grid-row: span var(--rows,1);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

<div
  className="c0 c1"
  data-bedrock-masonry-grid=""
  style={
    {
      "--gutter": "200px",
      "--minItemWidth": undefined,
    }
  }
>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > incorrect usage > renders default with console error with minItemWidth input 1`] = `
.c0 {
  box-sizing: border-box;
  display: grid;
  gap: var(--gutter,0px);
  grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth,639px),100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  grid-row: span var(--rows,1);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

<div
  className="c0 c1"
  data-bedrock-masonry-grid=""
  style={
    {
      "--gutter": "1rem",
      "--minItemWidth": {
        "value": "incorrect",
      },
    }
  }
>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > incorrect usage > renders default with console error with no gutter input 1`] = `
.c0 {
  box-sizing: border-box;
  display: grid;
  gap: var(--gutter,0px);
  grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth,639px),100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  grid-row: span var(--rows,1);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

<div
  className="c0 c1"
  data-bedrock-masonry-grid=""
  style={
    {
      "--gutter": undefined,
      "--minItemWidth": undefined,
    }
  }
>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > incorrect usage > renders default with wrong gutter input 1`] = `
.c0 {
  box-sizing: border-box;
  display: grid;
  gap: var(--gutter,0px);
  grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth,639px),100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  grid-row: span var(--rows,1);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

<div
  className="c0 c1"
  data-bedrock-masonry-grid=""
  style={
    {
      "--gutter": undefined,
      "--minItemWidth": undefined,
    }
  }
>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;
